# CORAL

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  README_CN.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: deploy-blog.yml  release.yml
assets/: README_CN.md  coral_diagram_alphaevolve.html  html_to_png.py  html_to_svg.py
blog/: index.html
competition/: common.sh  group1_algo_opus.sh  group2_algo_opus.sh  group3_algo_codex.sh  group4_research_opus.sh  group5_research_opus.sh  group6_research_codex.sh  run_all.sh
coral/: __init__.py  _version.py  config.py  types.py
coral/agent/: exit_classifier.py  heartbeat.py  manager.py  registry.py  runtime.py  warmstart.py
coral/cli/: __init__.py  _helpers.py  author.py  eval.py  (+5 more)
examples/: README.md
examples/dlomix-pfly/grader/: pyproject.toml
examples/dlomix-pfly/grader/src/dlomix_pfly_grader/: grader.py
examples/frontier_smith/grader/: pyproject.toml
examples/frontier_smith/grader/src/frontier_smith_grader/: __init__.py  grader.py
tests/: test_cli_log.py  test_compact.py  test_config.py  test_cursor_agent.py  test_grader.py  test_grader_daemon.py  test_heartbeat.py  test_hooks.py  test_hub.py  test_integration.py  test_manager_reliability.py  test_queue.py  test_rubric.py  test_subprocess_grader.py  test_template.py  test_types.py  test_workspace.py
ttt/: README.md  coral_api_server.py  coral_distill.py  coral_rollout.py  evaluator.py  generator.py  run_coral_distill.sh  run_coral_distill_docker.sh  run_coral_rl.sh  run_coral_rl_docker.sh  trainer.py
web/: package-lock.json
(+953 files in other folders)
